# EDIE_Emotion

./: README.md
edie_display/: CMakeLists.txt  package.xml
edie_display/config/: emotion_sequence.json
edie_display/include/edie_display/: Emotion.hpp  Emotions.hpp  Parser.hpp
edie_display/src/: Emotion.cpp  Emotions.cpp  Parser.cpp  edie_display_node.cpp
edie_emotion_handler/: CMakeLists.txt  package.xml
edie_emotion_handler/src/: edie_emotion_node.cpp
